--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
       <h3>Step 1: Upload Data</h3>
 
-      <img src="img/barchart_1.png">
+      <img src="img/barchart_1.gif">
 
       <p>There are lots of ways to import data into Datawrapper, but we'll start with the easiest one – copy and paste!</p>
-      <img class="medium" src="img/barchart_1a.png">
+      <img class="medium" src="img/barchart_1a.gif">
 
       <p>Your dataset should be formatted like this:
 
@@ -68,23 +68,23 @@
 
       <p>Note that the big numbers for immigration are intentionally without commas or extra formatting. <strong>Unformatted numbers are always best!</strong> </p>
 
-      <img src="img/barchart_2.png">
+      <img src="img/barchart_2.gif">
       <p>Copy the dataset into the upload field in Datawrapper. Then click "Proceed" and continue.</p>
 
       <h3>Step 2: Check & Describe</h3>
 
-      <img src="img/barchart_3.png">
+      <img src="img/barchart_3.gif">
       <p>Make sure everything looks good here. Note that because I pasted in the header rows "Year" and "Number of Immigrants", I check the "First row as label" button. That will make sure that it doesn't think those fields are actual data!</p>
 
       <p>If everything looks fine, then click "Proceed."</p>
 
       <h3>Step 3: Visualize</h3>
-       <img src="img/barchart_4.png">
+       <img src="img/barchart_4.gif">
       <p>Datawrapper will try to guess what format your data should be in. Here, it's guessing a line chart (Cue discussion of line charts vs bar charts!) But I actually want a bar chart, so I'm going to select bar chart from the menu of chart types.</p>
-      <img src="img/barchart_5.png">
+      <img src="img/barchart_5.gif">
 
       <p>Better! Now we have lots of options for how to style and annotate this chart, in the refine, annotate, and design tabs.</p>
-      <img class="medium" src="img/barchart_6.png">
+      <img class="medium" src="img/barchart_6.gif">
 
 
       <p>There are lots of things you can do in the Refine tab.</p>
@@ -93,21 +93,21 @@
       <p>Appearance: You can change the color of the bars, make the bars thicker, add a separating line, or a background to the bars. </p>
 
       <p>In this case, I'm going to give the bars a background grey and make them thicker and dark red, and also separate rows with dotted line. </p>
-      <img src="img/barchart_7.png">
+      <img src="img/barchart_7.gif">
 
 
       <p>Next we go to the Annotate tab.</p>
       <p>Let's give the chart a title, description, and add the source of the data. If you have a URL to the data source, that's even better.</p>
-      <img src="img/barchart_8.png">
+      <img src="img/barchart_8.gif">
 
       <p>We're going to quickly pass by the Design tab, and go straight to Publish!</p>
 
       <h3>Step 4: Publish & Embed</h3>
       <p>The most important step of all: publishing our chart!</p>
-      <img class="medium" src="img/barchart_9.png">
+      <img class="medium" src="img/barchart_9.gif">
 
       <p>Once you click Publish, you have the option of sharing, embedding, exporting or duplicating your chart.</p>
-      <img src="img/barchart_10.png">
+      <img src="img/barchart_10.gif">
 
       <p>And you're done! </p>
 
@@ -126,42 +126,42 @@
 
       <h3>Step 1: Upload Data</h3>
       <p>We'll follow the same steps as before, and start with uploading our data. This time rather than copying and pasting, we're going to link directly to a Google Spreadsheet. <p>
-      <img class="medium" src="img/linechart_1.png">
+      <img class="medium" src="img/linechart_1.gif">
 
       <p>Paste in this URL: </p>
       <p> <code>https://docs.google.com/spreadsheets/d/1KZSBBzPsNDOSW5Rpt0JIWm-ZlmvLcNuDHVh5qufNcVc/edit#gid=0</code> </p>
       <p>If all goes well, it should give you some green checkmarks to indicate that there are no issues with the spreadsheet. Remember: the spreadsheet has to by public for this to work. </p>
-      <img src="img/linechart_2.png">
+      <img src="img/linechart_2.gif">
       <p></p>
 
 
       <h3>Step 2: Check & Describe</h3>
       <p>Check again that everything looks good. If so, click "Proceed."</p>
-      <img src="img/linechart_3.png">
+      <img src="img/linechart_3.gif">
 
 
       <h3>Step 3: Visualize</h3>
       <p>In this case, Datawrapper guessed correctedly that we wanted a line chart. </p>
-      <img src="img/linechart_4.png">
+      <img src="img/linechart_4.gif">
 
       <p>Let's first go to the Refine tab. Let's set the chart to begin at 0, by going to Custom Range and setting our minimum as 0 and maximum to 800,000. then since we don't need all of these tick marks, let's get rid of some by setting out Custom Ticks to 100,000 , 500,000 and 750,000.</p>
-      <img src="img/linechart_5.png">
+      <img src="img/linechart_5.gif">
 
       <p>I'm going to use the Customize lines section to change the line color to red, and the Customize symbol section to add little diamonds to the start and end of our line.</p>
-      <img  class="small" src="img/linechart_6.png">
+      <img  class="small" src="img/linechart_6.gif">
 
       <p>Next the Annotate tab. Let's give our chart a title, description, source line, and a short note on when this data was collected,</p>
-      <img src="img/linechart_7.png">
+      <img src="img/linechart_7.gif">
 
 
       <p>Next I'm going to use the Highlight range values section to add the years that Obama and Trump were in office, and give each section an annotation using the Text annotations section. Note that you can expand the controls for the annotations by clicking the double arrows buttons on the right.
       </p>
 
-      <img class="small" src="img/linechart_8.png">
+      <img class="small" src="img/linechart_8.gif">
 
       <p>You're chart should look something like this: </p>
 
-      <img src="img/linechart_9.png">
+      <img src="img/linechart_9.gif">
 
 
 
@@ -201,56 +201,56 @@
       <p>Datawrapper gives you several options for types of maps. A choroplth map is a pretty common map form that is good for showing how states or counties compare to each other on some metric. </p>
 
       <p>Select Choropleth map.</p>
-      <img  src="img/map_1.png">
+      <img  src="img/map_1.gif">
 
       <p>Then search for USA &raquo; counties. Once you found it, click Next. </p>
-      <img src="img/map_2.png">
+      <img src="img/map_2.gif">
 
       <h3>Step 2: Add your data</h3>
       <p>We've done copying and pasting and also imported our data from a Google Spreadsheet, so this time we're going to try uploading a CSV file. Make sure <a href="http://lenagroeger.s3.amazonaws.com/data/maps/uv-county.csv" download>you have this file called <strong>uv-county.csv</strong> downloaded to your computer</a> before going to the next step.</p>
 
       <p>Click on the "... or import your dataset" button on the bottom left, the Start Import. The popup warns you that in order to make a county choropleth map, we need an ID for each county – called the FIPS Code. </p>
-      <img class="medium" src="img/map_3.png">
+      <img class="medium" src="img/map_3.gif">
 
       <p>Click on "Alternatively, click here to upload a CSV-file." and find the <strong>uv-county.csv</strong>  file you just downloaded (it should be somewhere on your Desktop or in your Downloads folder.</p>
 
       <p>Then you have to tell Datawrapper which column has this magical ID, the FIPS Code. In our case it is a column called COUNTY_FIPS, and Datawrapper should automatically recognize that.</p>
-      <img class="medium" src="img/map_4.png">
+      <img class="medium" src="img/map_4.gif">
 
       <p>Looks like there are some FIPs codes that Datawrapper doesn't recognize. Notice what it's showing? The state of Virginia. But Virginia is the whole state, and we are just mapping counties, so we're going to ignore this. Note that in your cases, if you have a lot of unmatched FIPS codes, it might be a problem worth checking out further.</p>
-       <img class="medium" src="img/map_5.png">
+       <img class="medium" src="img/map_5.gif">
 
        <p>Now you're going to select the column of data you want to map! In this case, we're mapping the average daily UV exposure of each county (in in watt hours per square meter), so go ahead and select the column <strong>UV_ wh/m2</strong>.</p>
-       <img class="medium" src="img/map_6.png">
+       <img class="medium" src="img/map_6.gif">
 
       <h3>Step 3: Visualize</h3>
 
       <p>We should have a pretty blue map! But cool blue shades doesn't seem like the appropriate color for a map on cancer-causing UV rays, so let's adjust. We're also going to play with the color bucket cutoffs so that we can better distinguish high and low exposure counties. </p>
 
-      <img src="img/map_7.png">
+      <img src="img/map_7.gif">
 
       <p>In the Refine tab under Color palette, under Stops select "quartiles," which automatically breaks the range for UV exposure into 4 buckets. </p>
 
-      <img class="small" src="img/map_8.png">
+      <img class="small" src="img/map_8.gif">
       <p>I can either select from a dropdown of pre-selected color ranges, or I can make my own. Since there isn't one I really like here, I'm going to create my own red-yellow color palette.</p>
 
-      <img src="img/map_9.png">
+      <img src="img/map_9.gif">
       <p>You can either keep fiddling with the colors until you find a selection you like, or you can enlist the help of smarter people who have thought a lot about color so that you don't have to. One of my favorite color picking tools is <a href="http://colorbrewer2.org/">Color Brewer</a>, which gives you specifically designed color sequences for maps. Another tool that helps with selecting colors on a gradient is <a href="http://www.0to255.com/">0to255.com</a>. </p>
 
-      <a href="http://colorbrewer2.org/"><img class="medium" src="img/map_10.png"></a>
+      <a href="http://colorbrewer2.org/"><img class="medium" src="img/map_10.gif"></a>
 
 
       <p>Everyone likes tooltips, so let's give our map some! Open up the Tooltip section and click on Customize tooltips. Now you have an interface where you can combine words plus any field in your data. I'm going to select COUNTY_NAME and STATE_ABR for the title, and UV_wh_m2 for the body.</p>
-      <img class="medium" src="img/map_11.png">
+      <img class="medium" src="img/map_11.gif">
 
       <p>Now we have tooltips!</p>
 
-      <img class="medium" src="img/map_12.png">
+      <img class="medium" src="img/map_12.gif">
       <p>I'm going to adjust the Map key a little bit to make the legend more legible. </p>
-      <img class="medium" src="img/map_13.png">
+      <img class="medium" src="img/map_13.gif">
 
       <p>Next in the Annotate tab, let's give our map a title description, and data source + link.</p>
-      <img src="img/map_14.png">
+      <img src="img/map_14.gif">
 
       <h3>Step 4: Publish & Embed</h3>
 
