--- a/index.html
+++ b/index.html
@@ -290,6 +290,16 @@
 
       </ul>
 
+
+      <p>Remember that Datawrapper has <a href="https://academy.datawrapper.de/">many more tutorials</a> on all different types of charts, from <a href="https://academy.datawrapper.de/article/17-how-to-create-a-stacked-bar-chart">stacked bar charts</a> to <a href="https://academy.datawrapper.de/article/106-how-to-create-an-area-chart">area charts</a> to <a href="https://academy.datawrapper.de/category/79-scatterplots">scatterplots</a>. </p>
+
+      <a href="https://academy.datawrapper.de/"><img class="medium" src="img/tutorials.gif"></a>
+
+      <p>Also, you can browse through the Datawrapper <a href="https://river.datawrapper.de/">"River"</a> to see how other people have used Datawrapper to make their own charts. You can even click on a chart to get the data or reuse it (with proper attribution). </p>
+
+      <a href="https://river.datawrapper.de/"><img class="medium" src="img/river.gif"></a>
+
+
     </div>
 
 
