--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p>There are lots of ways to import data into Datawrapper, but we'll start with the easiest one – copy and paste!</p>
       <img class="medium" src="img/barchart_1a.gif">
 
-      <p>Your dataset should be formatted like this:
+      <p>Your dataset should be formatted like this: </p>
 
       <ul> 
        <li><strong>Descriptive&nbsp;labels in the first column as categories</strong>. <br> This will determine the label in front of each bar. </li> 
@@ -61,7 +61,7 @@
       </ul>
 
 
-      </p>
+     
 
       <p>Note that the big numbers for immigration are intentionally without commas or extra formatting. <strong>Unformatted numbers are always best!</strong> </p>
 
@@ -129,7 +129,7 @@
       <p> <code>https://docs.google.com/spreadsheets/d/1KZSBBzPsNDOSW5Rpt0JIWm-ZlmvLcNuDHVh5qufNcVc/edit#gid=0</code> </p>
       <p>If all goes well, it should give you some green checkmarks to indicate that there are no issues with the spreadsheet. Remember: the spreadsheet has to by public for this to work. </p>
       <img src="img/linechart_2.gif">
-      <p></p>
+      
 
 
       <h3>Step 2: Check & Describe</h3>
@@ -163,22 +163,6 @@
 
 
       <p>Now we Publish & done!!</p>
-
-<!-- 
-      <h3>Step 4: Publish & Embed</h3>
-
-      <h2>3: Multi-series Line Chart</h2>
-      <h3>Step 1: Upload Data</h3>
-
-      <h3>Step 2: Check & Describe</h3>
-
-      <h3>Step 3: Visualize</h3>
-
-      <h3>Step 4: Publish & Embed</h3>
-
-      Or https://www.migrationpolicy.org/sites/default/files/datahub/MPI-Data-Hub_USInflowLPRsbyCOB_2016.xlsx
-
-      <p></p> -->
 
     </div>
 
@@ -253,7 +237,6 @@
 
       <p>If everything looks good, hit that Publish button!</p>
 
-      <p></p>
     </div>
 
 
