--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
 
       <p>And you're done! </p>
 
-      <p>Bonus question to consider: California, Texas, New York and Florida are pretty populous states. What other metric of immigration population could we use to represent the "top" immigrant states? <a href="https://www.migrationpolicy.org/programs/data-hub/charts/immigrant-population-state-1990-present?width=1000&height=850&iframe=true">Hint</a>. </p>
+      <p>Bonus question to consider: California, Texas, New York and Florida are pretty populous states. Why might this be a problem for our visualization?  </p>
+
+      <p>Here's a hint: </p>
+      <img class="medium" src="img/heatmap.png">
+
+     <p> What other metric of immigration population could we use to represent the "highest" immigrant states? <a href="https://www.migrationpolicy.org/programs/data-hub/charts/immigrant-population-state-1990-present?width=1000&height=850&iframe=true">Here's more data that might be useful</a>.</p>
 
 
     </div>
