--- a/index.html
+++ b/index.html
@@ -284,6 +284,14 @@
       <p>Here are a few sample datasets you can play with. </p>
 
       <ul>
+
+        <li>
+          <div><strong>Health & Wealth of Nations</strong>: The life expectancy, income and population of countries/regions around the globe. Data from <a href="https://www.gapminder.org/data/">Gapminder</a>. 
+
+
+          <div><span><a href="http://lenagroeger.s3.amazonaws.com/data/charts/health_wealth.csv?v2" download>DOWNLOAD </a></span></div>
+
+        </li>
         <li>
           <div><strong>Body Parts</strong>: How much various limbs are worth in different state Workers Compensation programs. For more context see <a href="https://www.propublica.org/article/how-much-is-your-arm-worth-depends-where-you-work">this story</a>, <a href="https://projects.propublica.org/graphics/workers-compensation-benefits-by-limb">this graphic</a>, and <a href="https://www.propublica.org/article/five-things-i-learned-making-a-chart-out-of-body-parts">this explanation</a>. Data from the <a href="https://www.propublica.org/datastore/dataset/workers-compensation-body-parts-data">ProPublica Data Store</a>.</div>
           
@@ -305,12 +313,14 @@
 
       </ul>
 
+      <p>If none of these appeal to you, you can browse through the Datawrapper <a href="https://river.datawrapper.de/">"River"</a> to see how other people have used Datawrapper to make their own charts. You can download the data straight from Datawrapper. If you do reuse it, make sure you give the proper attribution.</p>
+
 
       <p>Remember that Datawrapper has <a href="https://academy.datawrapper.de/">many more tutorials</a> on all different types of charts, from <a href="https://academy.datawrapper.de/article/17-how-to-create-a-stacked-bar-chart">stacked bar charts</a> to <a href="https://academy.datawrapper.de/article/106-how-to-create-an-area-chart">area charts</a> to <a href="https://academy.datawrapper.de/category/79-scatterplots">scatterplots</a>. </p>
 
       <a href="https://academy.datawrapper.de/"><img class="medium" src="img/tutorials.gif"></a>
 
-      <p>Also, you can browse through the Datawrapper <a href="https://river.datawrapper.de/">"River"</a> to see how other people have used Datawrapper to make their own charts. You can even click on a chart to get the data or reuse it (with proper attribution). </p>
+     
 
       <a href="https://river.datawrapper.de/"><img class="medium" src="img/river.gif"></a>
 
