--- a/index.html
+++ b/index.html
@@ -292,6 +292,16 @@
           <div><span><a href="http://lenagroeger.s3.amazonaws.com/data/charts/health_wealth.csv?v2" download>DOWNLOAD </a></span></div>
 
         </li>
+
+
+        <li>
+
+          <div><strong>Median Income in Florida </strong>: The median household income by county in Florida. Data from <a href="https://factfinder.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_16_5YR_S1903&prodType=table">the American FactFinder</a>.
+
+          <div><span><a href="http://lenagroeger.s3.amazonaws.com/data/charts/florida_county_income.csv?v2" download>DOWNLOAD </a></span></div>
+          </div>
+
+        </li>
         <li>
           <div><strong>Body Parts</strong>: How much various limbs are worth in different state Workers Compensation programs. For more context see <a href="https://www.propublica.org/article/how-much-is-your-arm-worth-depends-where-you-work">this story</a>, <a href="https://projects.propublica.org/graphics/workers-compensation-benefits-by-limb">this graphic</a>, and <a href="https://www.propublica.org/article/five-things-i-learned-making-a-chart-out-of-body-parts">this explanation</a>. Data from the <a href="https://www.propublica.org/datastore/dataset/workers-compensation-body-parts-data">ProPublica Data Store</a>.</div>
           
