--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <ul>
 
         <li>
-          <div><strong>Health & Wealth of Nations</strong>: The life expectancy, income and population of countries/regions around the globe. Data from <a href="https://www.gapminder.org/data/">Gapminder</a>. 
+          <div><strong>Health & Wealth of Nations</strong>: The life expectancy, income and population of countries/regions around the globe. Data from <a href="https://www.gapminder.org/data/">Gapminder</a>. </div>
 
 
           <div><span><a href="http://lenagroeger.s3.amazonaws.com/data/charts/health_wealth.csv?v2" download>DOWNLOAD </a></span></div>
