--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
           <div><strong>Median Income in Florida </strong>: The median household income by county in Florida. Data from <a href="https://factfinder.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_16_5YR_S1903&prodType=table">the American FactFinder</a>.</div>
 
-          <div><span><a href="http://lenagroeger.s3.amazonaws.com/data/charts/florida_county_income.csv?v2" download>DOWNLOAD </a></span></div>
+          <div><span><a href="http://lenagroeger.s3.amazonaws.com/data/charts/florida_county_income.csv?v2" download>DOWNLOAD </a></span>
           </div>
 
         </li>
