--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
     </div>
 
-    <div id="extra-final">
+    <div id="datasets">
       <h2>7: Now, you try! Visualize it. </h2>
 
       <p>We've successfully made a bar chart, line chart and choropleth map! But Datawrapper can do so much more! In the time remaining, I want you to take one of the following datasets (or one of your own), and use Datawrapper to make a new chart. It can be one of the forms we've already covered, or a new form (push yourself!) </p>
@@ -290,6 +290,14 @@
 
 
           <div><span><a href="http://lenagroeger.s3.amazonaws.com/data/charts/health_wealth.csv?v2" download>DOWNLOAD </a></span></div>
+
+        </li>
+
+         <li>
+          <div><strong>Election Throwback</strong>: The U.S. presidential election results from 2008, by county. Data from <a href="https://github.com/helloworlddata/us-presidential-election-county-results">Data.gov via Dan Nguyen</a>. </div>
+
+
+          <div><span><a href="http://lenagroeger.s3.amazonaws.com/data/maps/us-presidential-election-2008.csv?v2" download>DOWNLOAD </a></span></div>
 
         </li>
 
